--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
   "scripts": {
     "dev": "sst dev",
     "typecheck": "bun --filter=* typecheck",
+    "format:write": "prettier . --write",
+    "format:check": "prettier . --check",
+    "lint": "cd packages/web && eslint .",
     "deploy:prod": "sst deploy --stage prod",
     "secret:load": "sst secret load .secrets",
     "secret:load:prod": "sst secret load .secrets --stage prod",
@@ -17,7 +20,17 @@
     "db:push": "sst shell drizzle-kit push"
   },
   "devDependencies": {
-    "typescript": "5.6.2"
+    "typescript": "5.6.2",
+    "@eslint/compat": "^1.2.0",
+    "@eslint/js": "^9.12.0",
+    "@ianvs/prettier-plugin-sort-imports": "^4.3.1",
+    "@types/bun": "latest",
+    "eslint": "^9.12.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-drizzle": "^0.2.3",
+    "globals": "^15.10.0",
+    "prettier": "^3.3.3",
+    "typescript-eslint": "^8.8.1"
   },
   "dependencies": {
     "@pulumi/pulumi": "^3.136.1",
