--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -1,12 +1,55 @@
 {
   "name": "@semhub/web",
   "version": "0.0.0",
+  "type": "module",
   "dependencies": {
-    "@semhub/core": "*"
+    "@semhub/core": "*",
+    "@tanstack/react-form": "^0.33.0",
+    "@tanstack/react-query": "^5.59.6",
+    "@tanstack/react-router": "^1.63.5",
+    "@tanstack/router-devtools": "^1.63.5",
+    "@tanstack/router-zod-adapter": "^1.63.5",
+    "@tanstack/zod-form-adapter": "^0.33.0",
+    "autoprefixer": "^10.4.20",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
+    "hono": "^4.6.3",
+    "immer": "^10.1.1",
+    "lucide-react": "^0.451.0",
+    "next-themes": "^0.3.0",
+    "postcss": "^8.4.47",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "sonner": "^1.5.0",
+    "tailwind-merge": "^2.5.3",
+    "tailwindcss": "^3.4.13",
+    "tailwindcss-animate": "^1.0.7"
   },
   "scripts": {
+    "dev": "vite --port=3001",
+    "build": "vite build",
+    "serve": "vite preview",
+    "start": "vite",
     "shell": "sst shell tsx",
     "typecheck": "tsc --noEmit"
   },
-  "devDependencies": {}
+  "devDependencies": {
+    "@eslint/compat": "^1.2.0",
+    "@eslint/js": "^9.12.0",
+    "@tanstack/eslint-plugin-query": "^5.59.7",
+    "@tanstack/eslint-plugin-router": "^1.63.4",
+    "@tanstack/react-query-devtools": "^5.59.6",
+    "@tanstack/router-plugin": "^1.63.5",
+    "@types/react": "^18.3.3",
+    "@types/react-dom": "^18.3.0",
+    "@vitejs/plugin-react": "^4.3.2",
+    "eslint": "^9.12.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-jsx-a11y": "^6.10.0",
+    "eslint-plugin-react": "^7.37.1",
+    "eslint-plugin-tailwindcss": "^3.17.4",
+    "globals": "^15.11.0",
+    "typescript-eslint": "^8.8.1",
+    "vite": "^5.4.8"
+  }
 }
