--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "scripts": {
     "test": "sst shell vitest",
-    "typecheck": "tsc --noEmit"
+    "typecheck": "tsc"
   },
   "exports": {
     "./*": [
@@ -12,6 +12,7 @@
     ]
   },
   "dependencies": {
+    "hono": "^4.6.5",
     "drizzle-orm": "^0.33.0",
     "drizzle-zod": "^0.5.1",
     "zod": "^3.23.8"
