--- a/packages/web/tsconfig.json
+++ b/packages/web/tsconfig.json
@@ -7,9 +7,17 @@
     "module": "ESNext",
     "moduleResolution": "Bundler",
     "baseUrl": ".",
+    "rootDir": ".",
+    "outDir": "./build",
+    "skipLibCheck": true,
     "paths": {
       "@/core/*": ["../core/*"],
       "@/*": ["./src/*"]
     }
-  }
+  },
+  "references": [
+    {
+      "path": "../core"
+    }
+  ]
 }
