--- a/packages/workers/package.json
+++ b/packages/workers/package.json
@@ -5,9 +5,10 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
+    "@hono/zod-validator": "^0.4.1",
     "@semhub/core": "*",
     "cloudflare": "^3.1.0",
-    "hono": "^4.6.5"
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@cloudflare/workers-types": "^4.20241011.0"
