--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -7,7 +7,6 @@
     "@tanstack/react-form": "^0.33.0",
     "@tanstack/react-query": "^5.59.6",
     "@tanstack/react-router": "^1.63.5",
-    "@tanstack/router-devtools": "^1.63.5",
     "@tanstack/router-zod-adapter": "^1.63.5",
     "@tanstack/zod-form-adapter": "^0.33.0",
     "autoprefixer": "^10.4.20",
@@ -26,7 +25,7 @@
   },
   "scripts": {
     "dev": "vite --port=3001",
-    "build": "vite build",
+    "build": "sst shell vite build",
     "serve": "vite preview",
     "start": "vite",
     "shell": "sst shell tsx",
@@ -38,6 +37,7 @@
     "@tanstack/eslint-plugin-query": "^5.59.7",
     "@tanstack/eslint-plugin-router": "^1.63.4",
     "@tanstack/react-query-devtools": "^5.59.6",
+    "@tanstack/router-devtools": "^1.63.5",
     "@tanstack/router-plugin": "^1.63.5",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
