--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -3,6 +3,8 @@
   "version": "0.0.0",
   "type": "module",
   "dependencies": {
+    "@radix-ui/react-icons": "^1.3.0",
+    "@radix-ui/react-accordion": "^1.2.1",
     "@semhub/core": "*",
     "@tanstack/react-form": "^0.33.0",
     "@tanstack/react-query": "^5.59.6",
