hook up frontend to backend

--- a/packages/workers/tsconfig.json
+++ b/packages/workers/tsconfig.json
@@ -7,7 +7,7 @@
     "types": ["@cloudflare/workers-types"],
     "paths": {
       "@/core/*": [
-        "../core/*"
+        "../core/src/*"
       ],
       "@/*": [
         "./src/*"
