--- a/packages/web/tsconfig.json
+++ b/packages/web/tsconfig.json
@@ -11,7 +11,7 @@
     "outDir": "./build",
     "skipLibCheck": true,
     "paths": {
-      "@/core/*": ["../core/*"],
+      "@/core/*": ["../core/src/*"],
       "@/*": ["./src/*"]
     }
   },
