--- a/packages/workers/tsconfig.json
+++ b/packages/workers/tsconfig.json
@@ -6,7 +6,7 @@
     "noUncheckedIndexedAccess": true,
     "types": ["@cloudflare/workers-types"],
     "paths": {
-      "@/core/*": [
+      "@semhub/core/*": [
         "../core/src/*"
       ],
       "@/*": [
