--- a/package.json
+++ b/package.json
@@ -15,10 +15,7 @@
     "deploy:prod": "sst deploy --stage prod",
     "secret:load": "sst secret load .secrets",
     "secret:load:prod": "sst secret load .secrets --stage prod",
-    "db": "sst shell drizzle-kit",
-    "db:generate": "sst shell drizzle-kit generate",
-    "db:migrate": "sst shell drizzle-kit migrate",
-    "db:push": "sst shell drizzle-kit push"
+    "script": "cd packages/scripts && bun run shell"
   },
   "devDependencies": {
     "typescript": "5.6.2",
