--- a/packages/scripts/package.json
+++ b/packages/scripts/package.json
@@ -10,8 +10,7 @@
     "db:generate": "sst shell -- drizzle-kit generate --config=../core/drizzle.config.ts",
     "db:migrate": "sst shell -- drizzle-kit migrate --config=../core/drizzle.config.ts",
     "db:push": "sst shell -- drizzle-kit push --config=../core/drizzle.config.ts",
-    "shell": "sst shell tsx",
-    "typecheck": "tsc --noEmit"
+    "shell": "sst shell tsx"
   },
   "devDependencies": {
     "tsx": "^4.7.2"
