add basic eslint rule

--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
     "typecheck": "bun --filter=* typecheck",
     "format:write": "prettier . --write",
     "format:check": "prettier . --check",
-    "lint": "cd packages/web && eslint .",
-    "lint:fix": "cd packages/web && eslint . --fix",
+    "lint": "eslint . && cd packages/web && eslint .",
+    "lint:fix": "eslint . --fix && cd packages/web && eslint . --fix",
     "deploy:prod": "sst deploy --stage prod",
     "secret:load": "sst secret load .secrets",
     "secret:load:prod": "sst secret load .secrets --stage prod",
