prettier slight change

--- a/packages/core/tsconfig.json
+++ b/packages/core/tsconfig.json
@@ -6,6 +6,6 @@
     "moduleResolution": "Bundler",
     "emitDeclarationOnly": true,
     "outDir": "./dist",
-    "noUncheckedIndexedAccess": true,
+    "noUncheckedIndexedAccess": true
   }
 }
