--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -15,6 +15,8 @@
   "dependencies": {
     "drizzle-orm": "^0.33.0",
     "drizzle-zod": "^0.5.1",
+    "graphql": "^16.9.0",
+    "graphql-tag": "^2.12.6",
     "hono": "^4.6.5",
     "octokit": "^4.0.2",
     "postgres": "^3.4.4",
