--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -20,7 +20,7 @@
     "hono": "^4.6.5",
     "octokit": "^4.0.2",
     "postgres": "^3.4.4",
-    "ulid": "^2.3.0",
+    "ulidx": "^2.4.1",
     "zod": "^3.23.8"
   },
   "devDependencies": {
