--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -17,13 +17,14 @@
     ]
   },
   "dependencies": {
+    "dedent": "^1.5.3",
     "drizzle-orm": "^0.33.0",
     "drizzle-zod": "^0.5.1",
-    "effect": "^3.10.7",
     "graphql": "^16.9.0",
     "graphql-tag": "^2.12.6",
     "hono": "^4.6.5",
     "octokit": "^4.0.2",
+    "openai": "^4.69.0",
     "postgres": "^3.4.4",
     "ulidx": "^2.4.1",
     "zod": "^3.23.8"
