--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   ],
   "scripts": {
     "dev": "sst dev",
+    "dev:cf": "wrangler dev",
     "typecheck": "bun --filter=* typecheck",
     "format:write": "prettier . --write",
     "format:check": "prettier . --check",
@@ -18,7 +19,6 @@
     "script": "cd packages/scripts && bun run shell"
   },
   "devDependencies": {
-    "typescript": "5.6.2",
     "@eslint/compat": "^1.2.0",
     "@eslint/js": "^9.12.0",
     "@ianvs/prettier-plugin-sort-imports": "^4.3.1",
@@ -28,7 +28,9 @@
     "eslint-plugin-drizzle": "^0.2.3",
     "globals": "^15.10.0",
     "prettier": "^3.3.3",
-    "typescript-eslint": "^8.8.1"
+    "typescript": "5.6.2",
+    "typescript-eslint": "^8.8.1",
+    "wrangler": "^3.84.1"
   },
   "dependencies": {
     "@pulumi/pulumi": "^3.136.1",
