deploy on Coder's Cloudflare account

--- a/packages/scripts/package.json
+++ b/packages/scripts/package.json
@@ -6,13 +6,10 @@
     "@semhub/core": "*"
   },
   "scripts": {
-    "deploy:cf": "sst shell -- tsx src/wrangler.ts deploy",
-    "deploy:cf:prod": "sst shell -- tsx src/wrangler.ts deploy --env production",
+    "deploy:cf": "sst shell -- bun src/wrangler.ts deploy",
+    "deploy:cf:prod": "sst shell -- bun src/wrangler.ts deploy --env production",
     "typecheck": "tsc --noEmit",
-    "shell": "sst shell -- tsx",
-    "shell:prod": "sst shell --stage prod -- tsx"
-  },
-  "devDependencies": {
-    "tsx": "^4.7.2"
+    "shell": "sst shell -- bun",
+    "shell:prod": "sst shell --stage prod -- bun"
   }
 }
