--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-accordion": "^1.2.1",
+    "@radix-ui/react-slot": "^1.1.0",
     "@semhub/core": "*",
     "@tanstack/react-form": "^0.33.0",
     "@tanstack/react-query": "^5.59.6",
@@ -30,7 +31,6 @@
     "build": "vite build",
     "serve": "vite preview",
     "start": "vite",
-    "shell": "sst shell tsx",
     "typecheck": "tsc --noEmit"
   },
   "devDependencies": {
