--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -31,6 +31,7 @@
     "zod": "^3.23.8"
   },
   "devDependencies": {
+    "@cloudflare/workers-types": "^4.20241022.0",
     "@tsconfig/node20": "20.1.4",
     "drizzle-kit": "^0.24.2",
     "vitest": "^2.1.3"
