--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -7,6 +7,7 @@
     "@radix-ui/react-accordion": "^1.2.1",
     "@radix-ui/react-slot": "^1.1.0",
     "@semhub/core": "*",
+    "@semhub/workers": "*",
     "@tanstack/react-form": "^0.33.0",
     "@tanstack/react-query": "^5.59.6",
     "@tanstack/react-router": "^1.63.5",
@@ -31,7 +32,7 @@
     "build": "vite build",
     "serve": "vite preview",
     "start": "vite",
-    "typecheck": "tsc --noEmit"
+    "typecheck": "tsc --build"
   },
   "devDependencies": {
     "@eslint/compat": "^1.2.0",
