--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -4,6 +4,7 @@
   "type": "module",
   "scripts": {
     "test": "sst shell vitest",
+    "test:watch": "sst shell -- vitest watch",
     "typecheck": "tsc",
     "db": "sst shell -- drizzle-kit",
     "db:generate": "sst shell -- drizzle-kit generate",
