--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -3,8 +3,9 @@
   "version": "0.0.0",
   "type": "module",
   "dependencies": {
-    "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-accordion": "^1.2.1",
+    "@radix-ui/react-dialog": "^1.1.2",
+    "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-slot": "^1.1.0",
     "@semhub/core": "*",
     "@semhub/workers": "*",
@@ -16,6 +17,7 @@
     "autoprefixer": "^10.4.20",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "cmdk": "1.0.0",
     "immer": "^10.1.1",
     "lucide-react": "^0.451.0",
     "next-themes": "^0.3.0",
