--- a/packages/scripts/tsconfig.json
+++ b/packages/scripts/tsconfig.json
@@ -5,7 +5,7 @@
     "moduleResolution": "Bundler",
     "noUncheckedIndexedAccess": true,
     "paths": {
-      "@semhub/core/*": ["../core/src/*"],
+      "@/core/*": ["../core/src/*"],
       "@/*": ["./src/*"]
     }
   },
