--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -4,6 +4,7 @@
   "type": "module",
   "scripts": {
     "test": "sst shell vitest",
+    "test:watch": "sst shell -- vitest watch",
     "typecheck": "tsc",
     "db": "sst shell -- drizzle-kit",
     "db:generate": "sst shell -- drizzle-kit generate",
@@ -34,6 +35,7 @@
     "@cloudflare/workers-types": "^4.20241022.0",
     "@tsconfig/node20": "20.1.4",
     "drizzle-kit": "^0.24.2",
+    "tsd": "^0.31.2",
     "vitest": "^2.1.3"
   }
 }
