feat: use gql.tada

--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -22,8 +22,8 @@
     "dedent": "^1.5.3",
     "drizzle-orm": "^0.33.0",
     "drizzle-zod": "^0.5.1",
+    "gql.tada": "^1.8.10",
     "graphql": "^16.9.0",
-    "graphql-tag": "^2.12.6",
     "hono": "^4.6.5",
     "octokit": "^4.0.2",
     "openai": "^4.69.0",
