--- a/packages/core/tsconfig.json
+++ b/packages/core/tsconfig.json
@@ -6,6 +6,13 @@
     "moduleResolution": "Bundler",
     "emitDeclarationOnly": true,
     "outDir": "./dist",
+    "plugins": [
+      {
+        "name": "gql.tada/ts-plugin",
+        "schema": "src/github/schema.docs.graphql",
+        "tadaOutputLocation": "src/github/schema.docs.graphql.d.ts"
+      }
+    ],
     "noUncheckedIndexedAccess": true
-  }
+  },
 }
