apply lint rules

--- a/packages/core/tsconfig.json
+++ b/packages/core/tsconfig.json
@@ -13,6 +13,9 @@
         "tadaOutputLocation": "src/github/schema.docs.graphql.d.ts"
       }
     ],
-    "noUncheckedIndexedAccess": true
-  },
+    "noUncheckedIndexedAccess": true,
+    "paths": {
+      "@/*": ["./src/*"]
+    }
+  }
 }
