set up tsd tests

--- a/packages/core/tsconfig.json
+++ b/packages/core/tsconfig.json
@@ -17,5 +17,7 @@
     "paths": {
       "@/*": ["./src/*"]
     }
-  }
+  },
+  "include": ["src/**/*", "./sst-env.d.ts", "./tsd.d.ts", "./tsd.test-d.ts"],
+  "exclude": ["dist", "node_modules"]
 }
