--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -2,15 +2,20 @@
   "name": "@semhub/core",
   "version": "0.0.0",
   "type": "module",
+  "types": "tsd.d.ts",
   "scripts": {
     "test": "sst shell vitest",
     "test:watch": "sst shell -- vitest watch",
+    "test:types": "rm -rf ./dist && bun tsd",
     "typecheck": "tsc",
     "db": "sst shell -- drizzle-kit",
     "db:generate": "sst shell -- drizzle-kit generate",
     "db:migrate": "sst shell -- drizzle-kit migrate",
     "db:migrate:prod": "sst shell --stage prod -- drizzle-kit migrate",
     "db:push": "sst shell -- drizzle-kit push"
+  },
+  "tsd": {
+    "directory": "."
   },
   "exports": {
     "./*": [
