--- a/package.json
+++ b/package.json
@@ -8,15 +8,16 @@
   "scripts": {
     "dev": "sst dev",
     "dev:cf": "wrangler dev",
-    "typecheck": "bun --filter=* typecheck",
+    "typecheck": "bun --filter=@semhub/core typecheck && bun --filter=* typecheck",
     "format:write": "prettier . --write",
-    "format:check": "prettier . --check",
+    "format:check": "prettier . --check || (echo '⚠️  Warning: Formatting issues found' && exit 0)",
     "lint": "eslint . && cd packages/web && eslint .",
     "lint:fix": "eslint . --fix && cd packages/web && eslint . --fix",
     "deploy:prod": "sst deploy --stage prod",
     "secret:load": "sst secret load .secrets",
     "secret:load:prod": "sst secret load .secrets --stage prod",
-    "script": "cd packages/scripts && bun run shell"
+    "script": "cd packages/scripts && bun run shell",
+    "check:all": "concurrently -g --prefix \"[{name}]\" --prefix-colors \"blue.bold,green.bold,yellow.bold,magenta.bold,cyan.bold\" --names \"typecheck,test,test:types,lint,format\" \"bun typecheck\" \"bun --filter=@semhub/core test\" \"bun --filter=@semhub/core test:types\" \"bun lint\" \"bun format:check\""
   },
   "devDependencies": {
     "@eslint/compat": "^1.2.0",
@@ -30,7 +31,8 @@
     "prettier": "^3.3.3",
     "typescript": "5.6.2",
     "typescript-eslint": "^8.8.1",
-    "wrangler": "^3.84.1"
+    "wrangler": "^3.84.1",
+    "concurrently": "^8.2.2"
   },
   "dependencies": {
     "@pulumi/pulumi": "^3.136.1",
