--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -19,6 +19,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cmdk": "1.0.0",
+    "dompurify": "^3.2.1",
     "immer": "^10.1.1",
     "lucide-react": "^0.462.0",
     "next-themes": "^0.3.0",
