--- a/packages/workers/package.json
+++ b/packages/workers/package.json
@@ -9,6 +9,7 @@
     "@hono/zod-validator": "^0.4.1",
     "@semhub/core": "*",
     "cloudflare": "^3.1.0",
+    "p-map": "^7.0.2",
     "zod": "^3.23.8"
   },
   "devDependencies": {
