--- a/packages/workers/src/wrangler/rate-limiter/wrangler.toml
+++ b/packages/workers/src/wrangler/rate-limiter/wrangler.toml
@@ -1,6 +1,6 @@
 name = "rate-limiter"
-compatibility_date = "2024-10-22"             # keep in sync with @cloudflare/workers-types
-main = "packages/workers/src/rate-limiter.ts"
+compatibility_date = "2024-10-22" # keep in sync with @cloudflare/workers-types
+main = "./index.ts"
 
 [[durable_objects.bindings]]
 name = "RATE_LIMITER"
