--- a/packages/workers/tsconfig.json
+++ b/packages/workers/tsconfig.json
@@ -5,7 +5,6 @@
     "declaration": true,
     "declarationMap": true,
     "outDir": "./dist",
-    "rootDir": "./src",
     "module": "esnext",
     "moduleResolution": "bundler",
     "noUncheckedIndexedAccess": true,
@@ -19,5 +18,6 @@
     {
       "path": "../core"
     }
-  ]
+  ],
+  "include": ["src/**/*", "scripts/**/*"]
 }
