--- a/packages/workers/package.json
+++ b/packages/workers/package.json
@@ -3,6 +3,8 @@
   "version": "0.0.0",
   "scripts": {
     "typecheck": "tsc --noEmit",
+    "test": "vitest run",
+    "test:watch": "vitest watch",
     "build": "tsc --build",
     "dev": "bun scripts/worker.ts dev",
     "deploy": "bun scripts/worker.ts deploy",
@@ -17,6 +19,7 @@
   },
   "devDependencies": {
     "@cloudflare/workers-types": "^4.20241022.0",
-    "wrangler": "^3.91.0"
+    "wrangler": "^3.91.0",
+    "vitest": "^2.1.6"
   }
 }
