--- a/packages/workers/package.json
+++ b/packages/workers/package.json
@@ -6,9 +6,10 @@
     "test": "vitest run",
     "test:watch": "vitest watch",
     "build": "tsc --build",
-    "dev": "bun scripts/worker.ts dev",
-    "deploy": "bun scripts/worker.ts deploy",
-    "deploy:all": "bun run deploy rate-limiter && bun run deploy workflow"
+    "cf:dev": "bun scripts/worker.ts dev",
+    "cf:deploy": "bun scripts/worker.ts deploy",
+    "cf:delete": "bun scripts/worker.ts delete",
+    "cf:deploy:all": "bun run cf:deploy rate-limiter && bun run cf:deploy workflow"
   },
   "dependencies": {
     "@hono/zod-validator": "^0.4.1",
