--- a/packages/workers/package.json
+++ b/packages/workers/package.json
@@ -3,24 +3,13 @@
   "version": "0.0.0",
   "scripts": {
     "typecheck": "tsc --noEmit",
-    "test": "vitest run",
-    "test:watch": "vitest watch",
-    "build": "tsc --build",
-    "cf:dev": "bun scripts/worker.ts dev",
-    "cf:deploy": "bun scripts/worker.ts deploy",
-    "cf:delete": "bun scripts/worker.ts delete",
-    "cf:deploy:all": "bun run cf:deploy rate-limiter && bun run cf:deploy workflow"
+    "build": "tsc --build"
   },
   "dependencies": {
     "@hono/zod-validator": "^0.4.1",
-    "@semhub/core": "*",
-    "cloudflare": "^3.1.0",
-    "p-map": "^7.0.2",
-    "zod": "^3.23.8"
+    "@semhub/core": "*"
   },
   "devDependencies": {
-    "@cloudflare/workers-types": "^4.20241022.0",
-    "wrangler": "^3.91.0",
-    "vitest": "^2.1.6"
+    "@cloudflare/workers-types": "^4.20241022.0"
   }
 }
