--- a/packages/workers/package.json
+++ b/packages/workers/package.json
@@ -6,8 +6,9 @@
     "build": "tsc --build"
   },
   "dependencies": {
-    "@hono/zod-validator": "^0.4.1",
-    "@semhub/core": "*"
+    "@semhub/core": "workspace:*",
+    "@semhub/wrangler": "workspace:*",
+    "@hono/zod-validator": "^0.4.1"
   },
   "devDependencies": {
     "@cloudflare/workers-types": "^4.20241022.0"
