--- a/packages/wrangler/package.json
+++ b/packages/wrangler/package.json
@@ -9,8 +9,11 @@
     "test:watch": "vitest watch",
     "dev": "bun scripts/worker.ts dev",
     "deploy": "bun scripts/worker.ts deploy",
+    "deploy:prod": "bun scripts/worker.ts deploy --prod",
     "delete": "bun scripts/worker.ts delete",
-    "deploy:all": "bun run deploy rate-limiter && bun run deploy workflows/sync-repo/cron && bun run deploy workflows/sync-repo/init"
+    "delete:prod": "bun scripts/worker.ts delete --prod",
+    "deploy:all": "bun run deploy rate-limiter && bun run deploy workflows/sync-repo/cron && bun run deploy workflows/sync-repo/init",
+    "deploy:all:prod": "bun run deploy:prod rate-limiter && bun run deploy:prod workflows/sync-repo/cron && bun run deploy:prod workflows/sync-repo/init"
   },
   "dependencies": {
     "@semhub/core": "workspace:*",
