--- a/packages/wrangler/src/workflows/sync-repo/init/wrangler.toml
+++ b/packages/wrangler/src/workflows/sync-repo/init/wrangler.toml
@@ -1,4 +1,4 @@
-name = "sync-repo-init"
+name = "semhub-sync-repo-init-dev"
 main = "./index.ts"
 compatibility_date = "2024-10-22"       # keep in sync with @cloudflare/workers-types
 compatibility_flags = ["nodejs_compat"]
@@ -8,8 +8,15 @@ enabled = true
 head_sampling_rate = 1
 
 [[workflows]]
-name = "sync-repo-init-workflow"
+name = "semhub-sync-repo-init-workflow"
 binding = "SYNC_REPO_INIT_WORKFLOW"
 class_name = "SyncWorkflow"
 
-# TODO: modify to have separate workflows for prod vs dev
+# Production environment
+[env.prod]
+name = "semhub-sync-repo-init-prod"
+
+[[env.prod.workflows]]
+name = "semhub-sync-repo-init-workflow-prod"
+binding = "SYNC_REPO_INIT_WORKFLOW"
+class_name = "SyncWorkflow"
