--- a/packages/wrangler/scripts/tsconfig.json
+++ b/packages/wrangler/scripts/tsconfig.json
@@ -7,8 +7,16 @@
     "typeRoots": [
       "../",
       "../node_modules/@types"
-    ]
+    ],
+    "paths": {
+      "@/core/*": ["../../core/src/*"]
+    }
   },
+  "references": [
+    {
+      "path": "../../core"
+    }
+  ],
   "include": [
     "./**/*",
     "../sst-env.d.ts"
