feat: use cloudflare workflow to sync repo (#12)
* feat: use cf workflows to initialize repo

* baby steps to generalisation

* wip

* fix: mysterious typescsript error

* refactor: github and repo

* refactor some more

* setting up wrangler wip not working yet

* deploy cf stuff separately?

* binding

* fix type error

* refactor(workers): streamline worker deployment scripts and update dependencies

* feat(workers): implement typed workflow and refactor rate limiter

* outline workflows

* slight improvements

* rename, modify toml

* workflow setup wip

* setup wrangler as new package

* replace with dependency injection pattern

* finally done with setup and refactor

* clean up code, time to test?

* cleaned up once more, test soon

* bun dev is broken hmm

* fixed bun dev

* rate limiter wip

* more cleanup hmm

* introduce prod vs dev version of wrangler resources + script

* wip

* successfully triggerd workflow from server

* add migrations

* wip

* chunk

* workflow is running nicely (probably to completion albeit slowly)

* add rate limiter wip

* found bug, broke down into smaller steps

* apply rate limiter to init

* lint

* fix ci issue

* create new workflow for embedding to get around subrequests limit

* debug init workflow

* minor optimisation

* fixed at last?

* improve typing

* fix possible race condition

* tighen linting

* pmap to speed up embedding?

* add name for better observability

* found bug

* trying to fix bugs

* serialization bug

* fix options bug sigh

* early return

* ParamsRPC

* redo lock

* fix: repo sync lock mechanism

* final updates

* optimise embedding for cron

* should work now

* first steps to scalability

* add constants todos

---------

Co-authored-by: zx <67887489+tan-zx@users.noreply.github.com>

--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
   ],
   "scripts": {
     "dev": "sst dev",
-    "dev:cf": "wrangler dev",
-    "typecheck": "bun --filter=@semhub/core typecheck && bun --filter=* typecheck",
+    "typecheck": "bun --filter=@semhub/core typecheck && bun --filter=@semhub/wrangler typecheck && bun --filter=@semhub/workers typecheck && bun --filter=@semhub/scripts typecheck && bun --filter=@semhub/web typecheck",
+    "typecheck:parallel": "concurrently -g --prefix \"[{name}]\" --prefix-colors \"blue.bold,green.bold,yellow.bold,red.bold,magenta.bold\" --names \"core,wrangler,workers,scripts,web\" \"bun --filter=@semhub/core typecheck\" \"bun --filter=@semhub/wrangler typecheck\" \"bun --filter=@semhub/workers typecheck\" \"bun --filter=@semhub/scripts typecheck\" \"bun --filter=@semhub/web typecheck\"",
     "format:write": "prettier . --write",
     "format:check": "prettier . --check || (echo '⚠️  Warning: Formatting issues found' && exit 0)",
     "lint": "eslint . && cd packages/web && eslint .",
@@ -17,7 +17,7 @@
     "secret:load": "sst secret load .secrets",
     "secret:load:prod": "sst secret load .secrets --stage prod",
     "script": "cd packages/scripts && bun run shell",
-    "check:all": "concurrently -g --prefix \"[{name}]\" --prefix-colors \"blue.bold,green.bold,yellow.bold,magenta.bold,cyan.bold\" --names \"typecheck,test,test:types,lint,format\" \"bun typecheck\" \"bun --filter=@semhub/core test\" \"bun --filter=@semhub/core test:types\" \"bun lint\" \"bun format:check\""
+    "check:all": "concurrently -g --prefix \"[{name}]\" --prefix-colors \"blue.bold,green.bold,yellow.bold,red.bold,magenta.bold,cyan.bold\" --names \"typecheck,test,test:types,lint,format\" \"bun typecheck\" \"bun --filter=* test\" \"bun --filter=@semhub/core test:types\" \"bun lint\" \"bun format:check\""
   },
   "devDependencies": {
     "@eslint/compat": "^1.2.0",
@@ -31,7 +31,6 @@
     "prettier": "^3.3.3",
     "typescript": "5.6.2",
     "typescript-eslint": "^8.8.1",
-    "wrangler": "^3.84.1",
     "concurrently": "^8.2.2"
   },
   "dependencies": {
