--- a/packages/workers/package.json
+++ b/packages/workers/package.json
@@ -6,10 +6,9 @@
     "build": "tsc --build"
   },
   "dependencies": {
-    "@hono/zod-validator": "^0.4.1",
-    "@semhub/core": "*",
-    "cloudflare": "^3.1.0",
-    "zod": "^3.23.8"
+    "@semhub/core": "workspace:*",
+    "@semhub/wrangler": "workspace:*",
+    "@hono/zod-validator": "^0.4.1"
   },
   "devDependencies": {
     "@cloudflare/workers-types": "^4.20241022.0"
