--- a/packages/wrangler/package.json
+++ b/packages/wrangler/package.json
@@ -12,8 +12,8 @@
     "deploy:prod": "bun scripts/worker.ts deploy --prod",
     "delete": "bun scripts/worker.ts delete",
     "delete:prod": "bun scripts/worker.ts delete --prod",
-    "deploy:workflows": "bun run deploy workflows/sync/repo-init",
-    "deploy:all": "bun run deploy rate-limiter && bun run deploy workflows/sync/repo-init",
+    "deploy:workflows": "bun run deploy workflows/sync/repo-init && bun run deploy workflows/sync/embedding",
+    "deploy:all": "bun run deploy rate-limiter && bun run deploy workflows/sync/repo-init && bun run deploy workflows/sync/embedding",
     "deploy:all:prod": ""
   },
   "dependencies": {
