--- a/packages/wrangler/src/workflows/sync/embedding/wrangler.toml
+++ b/packages/wrangler/src/workflows/sync/embedding/wrangler.toml
@@ -1,5 +1,5 @@
-name = "semhub-sync-repo-embedding-dev"
-main = "./update.workflow.ts"
+name = "semhub-sync-embedding-dev"
+main = "./embedding.workflow.ts"
 compatibility_date = "2024-10-22"       # keep in sync with @cloudflare/workers-types
 compatibility_flags = ["nodejs_compat"]
 
@@ -8,15 +8,15 @@ enabled = true
 head_sampling_rate = 1
 
 [[workflows]]
-name = "semhub-sync-repo-embedding-workflow-dev"
-binding = "SYNC_REPO_EMBEDDING_WORKFLOW"
+name = "semhub-sync-embedding-workflow-dev"
+binding = "SYNC_EMBEDDING_WORKFLOW"
 class_name = "EmbeddingWorkflow"
 
 # Production environment
 [env.prod]
-name = "semhub-sync-repo-embedding-prod"
+name = "semhub-sync-embedding-prod"
 
 [[env.prod.workflows]]
-name = "semhub-sync-repo-embedding-workflow-prod"
-binding = "SYNC_REPO_EMBEDDING_WORKFLOW"
+name = "semhub-sync-embedding-workflow-prod"
+binding = "SYNC_EMBEDDING_WORKFLOW"
 class_name = "EmbeddingWorkflow"
