extracting constants part 1

--- a/packages/core/tsconfig.json
+++ b/packages/core/tsconfig.json
@@ -15,8 +15,14 @@
     ],
     "noUncheckedIndexedAccess": true,
     "paths": {
-      "@/*": ["./src/*"]
-    }
+      "@/*": ["./src/*"],
+      "@/infra/*": ["../../infra/*"]
+    },
+    "rootDir": "../../",
   },
+  "include": [
+    "./src/**/*",
+    "../../infra/types.ts"
+  ],
   "exclude": ["dist", "node_modules"]
 }
